# mllm

./: CMakeLists.txt
examples/: test_cpu.cpp  test_opencl.cpp
scripts/: build.sh  build_android.sh
src/: Backend.hpp  CPUMemory.hpp  Memory.hpp  Net.cpp  OpenCLMemory.hpp  OpenCLOp.hpp  Tensor.cpp  Tensor.hpp
src/backends/cpu/: CPUBackend.hpp
src/backends/opencl/: CMakeLists.txt  OpenCLAdd.cl  OpenCLAdd.cpp  OpenCLAdd.hpp  OpenCLBackend.cpp  OpenCLBackend.hpp  OpenCLGEMM.cl  OpenCLGEMM.cpp  OpenCLGEMM.hpp  OpenCLRuntime.cpp  OpenCLRuntime.hpp
src/memory/: OpenCLSystemMemoryManager.cpp  OpenCLSystemMemoryManager.hpp
test/cpu/: TestUtils.py
test/opencl/: OpenCLRuntimeTest.cpp
